--- a/09_RESTful/pom.xml
+++ b/09_RESTful/pom.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.gdu</groupId>
   <artifactId>prj09</artifactId>
-  <name>08_file</name>
+  <name>09_RESTful</name>
   <packaging>war</packaging>
   <version>1.0.0-BUILD-SNAPSHOT</version>
-  
+
   <properties>
     <java-version>11</java-version>
     <org.springframework-version>5.3.19</org.springframework-version>
@@ -15,8 +16,16 @@
     <org.slf4j-version>2.0.12</org.slf4j-version>
   </properties>
   
- <dependencies>
- 
+  <dependencies>
+
+
+    <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
+    <!--
+      jackson-databind / jackson-core / jackson-annotations >= 2.12.0
+      logback-core >= 1.3.0
+      logback-classic >= 1.3.0
+      slf4j-api >= 2.0
+    -->
     <dependency>
       <groupId>net.logstash.logback</groupId>
       <artifactId>logstash-logback-encoder</artifactId>
@@ -25,20 +34,20 @@
          such as usage of StructuredArguments/Markers or implementations such as
          JsonProvider, AppenderListener, JsonFactoryDecorator, JsonGeneratorDecorator, etc
       <scope>runtime</scope> -->
-    </dependency>    
- 
-    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-    <dependency>
-      <groupId>commons-fileupload</groupId>
-      <artifactId>commons-fileupload</artifactId>
-      <version>1.5</version>
     </dependency>
- 
+
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.11.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.5</version>
     </dependency>
   
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
@@ -48,18 +57,16 @@
       <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
-      
+  
     <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
-    <!-- aspect 로깅을 위한 어펜던시 -->
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
       <version>${org.aspectj-version}</version>
       <scope>runtime</scope>
     </dependency>
-    
+  
     <!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1 -->
-    <!-- 쿼리 출력을 위한 -->
     <dependency>
       <groupId>org.bgee.log4jdbc-log4j2</groupId>
       <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
@@ -67,7 +74,6 @@
     </dependency>
   
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-    <!-- 로그 (user 쪽) -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -75,7 +81,6 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
-    <!-- connection pooling을 제공하는 JDBC DataSource의 구현체  -->
     <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
@@ -83,15 +88,13 @@
     </dependency>
     
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
-    <!-- 스프링과 jdbc 이어주는 -->
     <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-jdbc</artifactId>
-        <version>${org.springframework-version}</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${org.springframework-version}</version>
     </dependency>
     
     <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
-    <!-- 마이바티스 -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
@@ -99,7 +102,6 @@
     </dependency>
     
     <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
-    <!-- 마이바티스 스프링 이어주는 -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
@@ -107,11 +109,13 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
-    <!-- 로그백 (백쪽) -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.3.14</version>
+      <!-- Use runtime scope if the project does not have any compile-time usage of logback,
+           such as implementations of Appender, Encoder, Layout, TurboFilter, etc
+      <scope>runtime</scope> -->
     </dependency>
   
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
@@ -199,16 +203,6 @@
       <version>1.2</version>
     </dependency>
   
-    <!-- Test -->
-   <!--  
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
-    --> 
-    
   </dependencies>
     
   <build>
