--- a/09_RESTful/src/main/webapp/WEB-INF/web.xml
+++ b/09_RESTful/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,6 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-
   <!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
@@ -34,6 +33,7 @@
   </listener>
 
   <!-- Processes application requests -->
+  <!-- view - DispatcherServlet - Controller  -->
   <servlet>
     <servlet-name>appServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
