--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,eclipse,java,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,eclipse,java,maven
 
+# email.properties
+email.properties
+
 ### Eclipse ###
 .metadata
 bin/
@@ -10,7 +13,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.settings/
+.settings/ 
 .loadpath
 .recommenders
 
